update integrate product service